--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,10 @@
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "passport-steam": "^1.0.18",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "steam-totp": "^2.1.2",
+    "steam-tradeoffer-manager": "^2.12.1",
+    "steam-user": "^5.2.3",
+    "steamcommunity": "^3.48.8"
   }
 }
